--- a/styles/style.css
+++ b/styles/style.css
@@ -165,6 +165,16 @@ border-radius: 8px;
     font-size: 20px;
    
 }
+#experience-badge{
+padding:45px 42px ;
+font-size: 1.5rem;
+font-weight: 500;
+margin-top: -100px;
+}
+#experience-year{
+   font-size:4rem ;
+   font-weight: 700; 
+}
 /* responsive area */
 @media screen and (max-width: 576px) {
    
